form now completely works

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -5766,6 +5766,9 @@ button.close {
   .hidden-print {
     display: none !important; } }
 
+.form-control {
+  height: 40px; }
+
 body {
   padding-top: 70px; }
 
